--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,7 @@
 
 body {
   margin: 0;
-
 }
-
-
 
 /*All modal and component styling*/
 /* Input Field */
@@ -62,4 +59,34 @@ input[type=number] {
   margin: 0;
   opacity: 1;
   transition: 0s
+}
+
+/*cash deposit container*/
+.cashDeposit__container {
+  display: flex;
+  flex: 1;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.action-button {
+  margin-left: 15px;
+}
+
+
+
+
+@media only screen and (max-width: 700px){
+  .cashDeposit__container {
+    flex-direction: column;
+  }
+  .button-section {
+    flex-direction: column;
+    align-items: left;
+  }
+  .action-button {
+    margin-top: 15px;
+    margin-left: 15px;
+
+  }
 }
