--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 * {
-  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'Roboto', sans-serif  !important;
 }
 
 
@@ -22,12 +22,14 @@ body {
 
 #selectField , #dateField, #listOfValue{
   outline: 1px solid rgb(196, 196, 196);
-  border-radius: 3px;
+  border-radius: 5px;
   border: none;
-  height: 25px;
+  height: 20px;
   font-size: 85%;
   padding-left: 7px;
+  color: rgb(92, 92, 92) !important;
 }
+
 
 .inputFieldDisabled {
   background-color: rgb(223, 223, 223);
@@ -35,7 +37,7 @@ body {
   border-radius: 3px;
   border: none;
   height: 25px;
-  font-size: 90%;
+  font-size: 85%;
   padding-left: 7px;
 }
 
@@ -140,8 +142,22 @@ background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, F
   display: flex;
 }
 
-
+/*SSTANDARDS CSS*/
 @media only screen and (max-width: 700px){
+  .flex-fallen{ 
+    flex-direction: column;
+    align-items: flex-start !important;
+  } 
+
+  .inputField {
+    width: 100% !important;
+  }
+
+  #selectField {
+    
+  }
+
+
   .the-card-component {
     width: 130px;
     flex-direction: column;
