--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Roboto', sans-serif  !important;
+  /* font-family: 'Roboto', sans-serif  !important; */
 }
 
 
@@ -23,6 +23,7 @@ body {
 #selectField , #dateField, #listOfValue{
   outline: 1px solid rgb(196, 196, 196);
   border-radius: 5px;
+  cursor: default !important;
   border: none;
   height: 20px;
   font-size: 85%;
@@ -94,8 +95,6 @@ input[type=number] {
 .cashDeposit__container {
   display: flex;
   flex: 1;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 .action-button {
